# mxscript

./: .gitignore  AGENT.md  AGENTS  AGENTS.md  FFI-Responding.md  LICENSE  Readme.md  build.py  codex_prompt_template.md  current_implementation.md  download_dep.py  main.py  mxscript_description.md  rebuild_rumtime.py  requirements.txt
demo_program/: examples.mxs  hello_world.mxs
demo_program/example/: file_io.mxs
demo_program/examples/: file_io.mxs  generic_swap.mxs  hello_world.mxs  universal_test.mxs
demo_program/examples/std/: error.mxs  file.mxs  io.mxs  random.mxs  time.mxs
demo_program/std/: array.mxs  error.mxs  io.mxs
document/: architecture.md  basic_syntax.md  develop_rule.md  ffi.md  getting_started.md  interpreter_design.md  refacting_policy.md  type_system.md
examples/: hello_world.mxs  print_test.mxs  universal_test.mxs
runtime/: CMakeLists.txt  arc_runtime.c  arc_runtime.h
runtime/impl/: allocator.cpp  arc.cpp  boolean.cpp  builtin.cpp  container.cpp  ffi.cpp  functions.cpp  integer.cpp  list.cpp  nil.cpp  null_type.cpp  numeric.cpp  object.cpp  string.cpp
runtime/include/: _typedef.hpp  allocator.hpp  arc.h  boolean.hpp  builtin.hpp  container.hpp  ffi.hpp  float.hpp  functions.hpp  integer.hpp  macro.hpp  nil.hpp  null_type.hpp  numeric.hpp  object.h  object.hpp  string.hpp  typeinfo.h
runtime/src/: allocator.cpp  ffi.cpp  float.cpp
scripts/: rebuild_runtime.sh
src/: errors.py
src/_builtin/: _builtin.hpp
src/backend/: __init__.py  abi_manager.py  compiler.py  ffi.py  ffi_map.json  ir.py  llir.py  llir_builder.py  runtime.py
src/backend/llvm/: __init__.py  context.py  ffi.py  generator.py  types.py
src/cui/: shell.py
src/driver/: main.py
src/frontend/: __init__.py  token_stream.py  tokenization.py  tokens.py
src/lexer/: Token.py  Tokenizer.py  __init__.py  token_stream.py
src/middleend/: __init__.py  symbols.py
src/semantic_analyzer/: __init__.py  analyzer.py  types.py
src/syntax_parser/: __init__.py  ast.py  definition_parser.py  expression_parser.py  parser.py  utils.py
stdlib/: _builtin.mxs
stdlib/std/: builtin.mxs  error.mxs  random.mxs  time.mxs
syntax/: syntax.ebnf
tests/: test_arc_integration.py  test_arc_runtime.py  test_backend.py  test_default_parameters.py  test_dynamic_dispatch.py  test_error_handling.py  test_ffi.py  test_frontend_tokenizer.py  test_keyword_defaults.py  test_llvm_backend.py  test_loops.py  test_main.py  test_parser.py  test_scoped_destruction.py  test_semantic.py  test_static_dispatch.py  test_tokenizer.py
